<?xml version="1.0"?>
<package>
  <name>tork_moveit_tutorial</name>
  <version>0.1.1</version>
  <description>The tork_moveit_tutorial package</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <author>Yosuke Yamamoto</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  
  <export>
  </export>

</package>
